image source updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 </head>
 <body>
-    <div><img src="college-image.jpeg" alt="This image is not displayed" width="1260px" height="350  "></div>
+    <div><img src="images/college-image.jpeg" alt="This image is not displayed" width="1260px" height="350  "></div>
 
 <br><br>
 <div>
